# semantic_pose

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/: places.h
src/: places.cpp  semantic_pose_node.cpp
